--- a/GenerationTest/GenerationTest.csproj
+++ b/GenerationTest/GenerationTest.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Relationship.cs" />
     <Compile Include="RNG.cs" />
   </ItemGroup>
   <ItemGroup>
