--- a/GenerationTest/GenerationTest.csproj
+++ b/GenerationTest/GenerationTest.csproj
@@ -49,11 +49,15 @@
     <Compile Include="Gene.cs" />
     <Compile Include="Hair.cs" />
     <Compile Include="Eyes\HazelEyes.cs" />
+    <Compile Include="LifeEvent.cs" />
+    <Compile Include="LifeEvents\Birth.cs" />
+    <Compile Include="LifeEvents\Death.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Relationship.cs" />
     <Compile Include="RNG.cs" />
+    <Compile Include="TimeManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
