--- a/FightingMachines/FightingMachines.csproj
+++ b/FightingMachines/FightingMachines.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Field.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GenePool.cs" />
     <Compile Include="Hairs\BlondeHair.cs" />
@@ -77,6 +78,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Relationship.cs" />
     <Compile Include="RNG.cs" />
+    <Compile Include="Tile.cs" />
+    <Compile Include="Tiles\Empty.cs" />
+    <Compile Include="Tiles\Ground.cs" />
+    <Compile Include="Tiles\Wall.cs" />
     <Compile Include="TimeManager.cs" />
   </ItemGroup>
   <ItemGroup>
