--- a/FightingMachines/FightingMachines.csproj
+++ b/FightingMachines/FightingMachines.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GenePool.cs" />
     <Compile Include="Hairs\BlondeHair.cs" />
     <Compile Include="Eyes\BlueEyes.cs" />
     <Compile Include="Hairs\BrownHair.cs" />
