Added a BabyMaking test Fixed a potential bug in MakeBaby

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BabyMaking.cs" />
     <Compile Include="DeathOdds.cs" />
     <Compile Include="Orphans.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
